k8s/apps/external/hoarder/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder
  namespace: hoarder
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
